<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2011 Wglxy.com Derived from Google IO Schedule App, Copyright 
	2010 Google, Inc. Licensed under the Apache License, Version 2.0 (the "License"); 
	you may not use this file except in compliance with the License. You may 
	obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            style="@style/TitleBarLogo"
            android:layout_width="0dip"
            android:layout_weight="1.01"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/titlebluebutton1" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/title_bar_separator" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dip" >

        <Button
            android:id="@+id/home_btn_feature3"
            style="@style/HomeButton"
            android:drawableTop="@drawable/home_button3"
            android:onClick="onClickFeature"
            android:text="@string/title_feature3" />

        <Button
            android:id="@+id/home_btn_feature1"
            style="@style/HomeButton"
            android:drawableTop="@drawable/home_button1"
            android:onClick="onClickFeature"
            android:text="@string/title_feature1" />

        <Button
            android:id="@+id/home_btn_feature5"
            style="@style/HomeButton"
            android:drawableTop="@drawable/home_button5"
            android:onClick="onClickFeature"
            android:text="@string/title_feature5" />
    </LinearLayout>

</LinearLayout>