<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2011 Wglxy.com Licensed under the Apache License, Version 
	2.0 (the "License"); you may not use this file except in compliance with 
	the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@drawable/background"
    android:baselineAligned="false"
    tools:ignore="ContentDescription"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/title_bar_separator" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/dm_elv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout2"
        android:background="@color/dm_background" >

        <!-- Preview: listitem=@android:layout/simple_list_item_checked -->
    </ExpandableListView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="bottom" >

        <ImageButton
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#AA087FAA"
            android:contentDescription="@string/back_arrow"
            android:gravity="center"
            android:src="@drawable/arrow1"
            android:text="@string/back" />

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#AA087FAA"
            android:contentDescription="@string/next_arrow"
            android:gravity="center"
            android:src="@drawable/arrow2"
            android:text="@string/next" />
    </LinearLayout>

</RelativeLayout>